tests/ui/range/issue-73553-misinterp-range-literal.stderr
error[E0308]: mismatched types
  --> $DIR/issue-73553-misinterp-range-literal.rs:12:10
   |
LL |     demo(tell(1)..tell(10));
   |     ---- ^^^^^^^^^^^^^^^^^
   |     |    |
   |     |    expected `&Range<usize>`, found `Range<usize>`
   |     |    help: consider borrowing here: `&(tell(1)..tell(10))`
   |     arguments to this function are incorrect
   |
   = note: expected reference `&std::ops::Range<usize>`
                 found struct `std::ops::Range<usize>`
note: function defined here
  --> $DIR/issue-73553-misinterp-range-literal.rs:3:4
   |
LL | fn demo(r: &Range) {
   |    ^^^^ ---------

error[E0308]: mismatched types
  --> $DIR/issue-73553-misinterp-range-literal.rs:14:10
   |
LL |     demo(1..10);
   |     ---- ^^^^^
   |     |    |
   |     |    expected `&Range<usize>`, found `Range<{integer}>`
   |     |    help: consider borrowing here: `&(1..10)`
   |     arguments to this function are incorrect
   |
   = note: expected reference `&std::ops::Range<usize>`
                 found struct `std::ops::Range<{integer}>`
note: function defined here
  --> $DIR/issue-73553-misinterp-range-literal.rs:3:4
   |
LL | fn demo(r: &Range) {
   |    ^^^^ ---------

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
